// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ItemTableRow matches expand snapshot 1`] = `
<tr
  className="selected"
  key="187-3206"
  onClick={[Function]}
  onKeyUp={[Function]}
>
  <td
    key="checkbox-control"
    onClick={[Function]}
    onKeyUp={[Function]}
    tabIndex={0}
  >
    <i
      aria-hidden="true"
      className="fa fa-square-o fa-sm table-icon"
    />
     
  </td>
  <td
    key="expand-control"
    tabIndex={0}
  >
    <i
      aria-hidden="true"
      className="fa fa-chevron-down fa-sm table-icon"
    />
  </td>
  <td
    className="item"
    key="item-187-3206"
  >
    <span
      key="item"
    >
      <span>
        3206
      </span>
    </span>
  </td>
  <td
    className="claimAndTarget"
    key="claimAndTarget-187-3206"
  >
    <span
      key="claim"
    >
      <span>
        Concepts and Procedures
      </span>
    </span>
    <span
      key="target"
    >
      <ToolTip
        displayIcon={false}
        helpText="Target A description"
        position="top"
      >
        /
      </ToolTip>
    </span>
  </td>
  <td
    className="subject"
    key="subject-187-3206"
  >
    <span
      key="subject"
    >
      <span>
        Math
      </span>
    </span>
  </td>
  <td
    className="grade"
    key="grade-187-3206"
  >
    <span
      key="grade"
    >
      <span>
        Grade 6
      </span>
    </span>
  </td>
  <td
    className="item-type"
    key="item-type-187-3206"
  >
    <span
      key="item-type"
    >
      <span>
        Equation
      </span>
    </span>
  </td>
</tr>
`;

exports[`ItemTableRow matches snapshot 1`] = `
<tr
  className=""
  key="187-3206"
  onClick={[Function]}
  onKeyUp={[Function]}
>
  <td
    key="checkbox-control"
    onClick={[Function]}
    onKeyUp={[Function]}
    tabIndex={0}
  >
    <i
      aria-hidden="true"
      className="fa fa-square-o fa-sm table-icon"
    />
     
  </td>
  <td
    key="expand-control"
    tabIndex={0}
  >
    <i
      aria-hidden="true"
      className="fa fa-chevron-right fa-sm table-icon"
    />
  </td>
  <td
    className="item"
    key="item-187-3206"
  >
    <span
      key="item"
    >
      <span>
        3206
      </span>
    </span>
  </td>
  <td
    className="claimAndTarget"
    key="claimAndTarget-187-3206"
  >
    <span
      key="claim"
    >
      <span>
        Concepts and Procedures
      </span>
    </span>
    <span
      key="target"
    >
      <ToolTip
        displayIcon={false}
        helpText="Target A description"
        position="top"
      >
        /
      </ToolTip>
    </span>
  </td>
  <td
    className="subject"
    key="subject-187-3206"
  >
    <span
      key="subject"
    >
      <span>
        Math
      </span>
    </span>
  </td>
  <td
    className="grade"
    key="grade-187-3206"
  >
    <span
      key="grade"
    >
      <span>
        Grade 6
      </span>
    </span>
  </td>
  <td
    className="item-type"
    key="item-type-187-3206"
  >
    <span
      key="item-type"
    >
      <span>
        Equation
      </span>
    </span>
  </td>
</tr>
`;
